--- a/package.json
+++ b/package.json
@@ -5,11 +5,30 @@
         "debug": "^4.3.1",
         "express": "^4.17.1",
         "mysql2": "^2.2.5",
+        "reflect-metadata": "^0.1.13",
         "typeorm": "^0.2.29"
     },
     "devDependencies": {
         "@types/debug": "^4.1.5",
         "@types/express": "^4.17.9",
+        "nodemon": "^2.0.6",
+        "ts-node": "^9.1.1",
         "typescript": "^4.1.3"
+    },
+    "nodemonConfig": {
+        "restartable": "rs",
+        "ignore": [
+            ".git",
+            "node_modules"
+        ],
+        "env": {
+            "DEBUG": "nfsw:*"
+        },
+        "exec": "./node_modules/.bin/ts-node index.ts",
+        "watch": [
+            "./index.ts",
+            "./app/**/*"
+        ],
+        "ext": "ts"
     }
 }
