--- a/package.json
+++ b/package.json
@@ -4,13 +4,20 @@
     "dependencies": {
         "debug": "^4.3.1",
         "express": "^4.17.1",
+        "glob": "^7.1.6",
+        "js2xmlparser": "^4.0.1",
+        "jsontoxml": "^1.0.1",
         "mysql2": "^2.2.5",
         "reflect-metadata": "^0.1.13",
-        "typeorm": "^0.2.29"
+        "typeorm": "^0.2.29",
+        "xml2json": "^0.12.0"
     },
     "devDependencies": {
         "@types/debug": "^4.1.5",
         "@types/express": "^4.17.9",
+        "@types/glob": "^7.1.3",
+        "@types/jsontoxml": "^1.0.1",
+        "@types/xml2json": "^0.11.3",
         "nodemon": "^2.0.6",
         "ts-node": "^9.1.1",
         "typescript": "^4.1.3"
