--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@types/express": "^4.17.9",
         "@types/glob": "^7.1.3",
         "@types/jsontoxml": "^1.0.1",
+        "@types/node": "^14.14.19",
         "@types/xml2json": "^0.11.3",
         "nodemon": "^2.0.6",
         "ts-node": "^9.1.1",
@@ -31,9 +32,10 @@
         "env": {
             "DEBUG": "nfsw:*"
         },
-        "exec": "./node_modules/.bin/ts-node index.ts",
+        "exec": "./node_modules/.bin/ts-node tmp.ts",
         "watch": [
             "./index.ts",
+            "./tmp.ts",
             "./app/**/*"
         ],
         "ext": "ts"
